Fix vertical alignment of editor footer content
Fixes #1510

--- a/src/devtools/client/debugger/src/components/Editor/Footer.css
+++ b/src/devtools/client/debugger/src/components/Editor/Footer.css
@@ -25,6 +25,7 @@
 
 .source-footer-end {
   display: flex;
+  align-items: center;
   margin-left: auto;
 }
 
